--- a/src/pages/Body/Register/register.scss
+++ b/src/pages/Body/Register/register.scss
@@ -26,6 +26,11 @@
     }
   }
 
+  .mdp_message{
+    font-size: 0.6rem;
+    width: 75%;
+  }
+
   .login_return{
     color: variables.$myWhite;
   }
