--- a/src/pages/Body/Contact/contact.scss
+++ b/src/pages/Body/Contact/contact.scss
@@ -2,6 +2,7 @@
 
 #Contact {
     width: 100%;
+    position: relative;
     height: calc(100vh - variables.$footerHeight - variables.$headerHeight);
     max-height: variables.$maxHeightPC;
     display: flex;
@@ -38,6 +39,39 @@
         }
 
     }
+
+    dialog{
+        top: calc(100vh/2 - 150px);
+        left: calc(100vw/2 - 114px);
+        border-radius: 32px;
+        padding: 32px 16px;
+        flex-direction: column;
+        justify-content: center;
+
+        p{
+            width: 100%;
+            text-align: center;
+
+            strong{
+                color: variables.$myOrange;
+            }
+        }
+
+        div{
+            width: 100%;
+            text-align: center;
+
+            button{
+                width: 100px;
+                margin-top: 16px;
+                padding: 8px 0px;
+                border-radius: 8px;
+            }
+        }
+        
+
+    }
+
     button {
         background-color: rgba(variables.$myOrange, 0.8);
         color: variables.$myWhite;
