--- a/src/pages/Body/Edition/Formulaires/Projets/projets.scss
+++ b/src/pages/Body/Edition/Formulaires/Projets/projets.scss
@@ -50,6 +50,10 @@
         align-items: center;
         width: 100%;
 
+        input{
+          padding: 16px 8px;
+        }
+
         .container_img{
             width: 100%;
             height: 150px;
@@ -127,6 +131,40 @@
       #btn_update{
         background-color: variables.$myBlue;
         color: variables.$myWhite;
+      }
+    }
+  }
+
+  dialog{
+    width: 300px;
+    height: 160px;
+    border-radius: 16px;
+    padding-top: 16px;
+    top: calc(100vh /2 - variables.$footerHeight + variables.$headerHeight - 80px);
+    left: calc(100vw / 2 - 150px);
+
+    h3{
+      font-size: 1.1rem;
+      padding-bottom: 8px;
+    }
+
+    p{
+    
+      width: 100%;
+      text-align: center;
+      
+      strong{
+        color: variables.$myOrange;
+      }
+    }
+
+    div{
+      margin-top: 8px;
+      width: 100%;
+      text-align: center;
+
+      button{
+        width: 100px;
       }
     }
   }
