--- a/src/pages/Body/Edition/Formulaires/Technos/techno.scss
+++ b/src/pages/Body/Edition/Formulaires/Technos/techno.scss
@@ -7,52 +7,86 @@
   justify-content: center;
   align-items: center;
   gap: 3%;
-}
 
-#technoForm {
-  height: 90%;
-  width: 47%;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-
-  select {
-    background-color: white;
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    border: solid 1px lightgray;
-  }
-
-  button {
-    box-shadow: 0px 1px 2px variables.$myLightGray;
-  }
-
-  #image_row {
+  #technoForm {
+    height: 90%;
+    width: 47%;
+    padding: 16px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    flex-direction: column;
+    gap: 16px;
 
-    #image_container {
-      width: 100px;
-      height: 100px;
+    select {
+      background-color: white;
+      width: 100%;
+      height: 40px;
+      border-radius: 5px;
+      border: solid 1px lightgray;
+    }
+
+    button {
+      box-shadow: 0px 1px 2px variables.$myLightGray;
+    }
+
+    #image_row {
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: space-around;
 
-      img {
-        width: 100%;
+      #image_container {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 100%;
+        }
       }
     }
   }
-}
 
-#technoList {
-  height: 90%;
-  width: 47%;
-  padding: 16px;
-  border-radius: 16px;
-  background-color: white;
-  color: black;
+  dialog{
+    width: 300px;
+    height: 160px;
+    border-radius: 16px;
+    padding-top: 16px;
+    top: calc(100vh /2 - variables.$footerHeight + variables.$headerHeight - 80px);
+    left: calc(100vw / 2 - 150px);
+
+    h3{
+      font-size: 1.1rem;
+      padding-bottom: 8px;
+    }
+
+    p{
+    
+      width: 100%;
+      text-align: center;
+      
+      strong{
+        color: variables.$myOrange;
+      }
+    }
+
+    div{
+      margin-top: 8px;
+      width: 100%;
+      text-align: center;
+
+      button{
+        width: 100px;
+      }
+    }
+  }
+
+  #technoList {
+    height: 90%;
+    width: 47%;
+    padding: 16px;
+    border-radius: 16px;
+    background-color: white;
+    color: black;
+  }
 }
