modification sur input de image dans Techno

--- a/src/pages/Body/Edition/Formulaires/Technos/techno.scss
+++ b/src/pages/Body/Edition/Formulaires/Technos/techno.scss
@@ -33,7 +33,7 @@
       align-items: center;
       justify-content: space-around;
 
-      #image_container {
+      .image_container {
         width: 100px;
         height: 100px;
         display: flex;
