--- a/src/pages/Body/Portfolio/MesTechnos/mesTechnos.scss
+++ b/src/pages/Body/Portfolio/MesTechnos/mesTechnos.scss
@@ -16,7 +16,7 @@
     }
     
     h2{
-        color: variables.$myWhite;
+        color: variables.$myBlack;
     }
     
     .container_vignetteTechno{
